<resources>
    <string name="app_name">Checkout</string>
    <string name="_0">0</string>
    <string name="text_format_from_to">%s - %s</string>
    <string name="text_continue_shopping">Continue Shopping</string>
    <string name="text_checkout">Checkout</string>
    <string name="text_face_value">Face value</string>
    <string name="text_sub_total">Subtotal</string>
    <string name="text_taxes">Taxes</string>
    <string name="text_total_checkout"><![CDATA[Total Incl. tax & fees:]]></string>
    <string name="text_refund_policy">Refund policy</string>
    <string name="text_refund_policy_desc">No refunds at any time\n\n*Service fees are non-refundable</string>
    <string name="text_order_protection">Order Protection</string>
    <string name="text_order_protection_desc"><![CDATA[Receive a 100% Refund if you cannot attend for one of the many reasons listed in our Terms & Conditions,]]></string>
    <string name="text_order_protection_desc_2">By adding Order Protection, you agree to the terms below and consent to processing of your personal information in accordance with Privacy Policy</string>
    <string name="text_continue">Continue</string>
    <string name="text_protection_cv_19">Covid-19</string>
    <string name="text_protection_injury">Injury &amp; Illness</string>
    <string name="text_protection_severe">Severe Weather</string>
    <string name="text_protection_layoff">Layoffs / Termination</string>
    <string name="text_recommend">Recommended</string>
    <string name="text_protection_add">Yes, Add Order Protection</string>
    <string name="text_protection_disable">No, I do not want Order Protection</string>
    <string name="text_format_fee_protection">%s Program Fee</string>
    <string name="text_upload_document"><u>Upload Document</u></string>
    <string name="text_questions">Questions</string>
    <string name="text_success">Success !</string>
    <string name="text_checkout_note">Please allow 10 minutes to receive your order. Check your email spam folder too.</string>
    <string name="text_point">point</string>
    <string name="text_your_earned">You Earned</string>
    <string name="text_your_points">Your Points</string>
    <string name="text_more_event">More Event</string>
    <string name="text_print">Print</string>
    <string name="text_payment_details">Payment Details</string>
    <string name="text_cancel">Cancel</string>
    <string name="text_fees">Fees</string>
    <string name="text_fees_desc">Price includes fees</string>
    <string name="text_detail_cart">Your %d Items</string>
</resources>