<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_checked">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/image_banner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_height="300dp" />

    <com.github.mmin18.widget.RealtimeBlurView
        android:id="@+id/blurView"
        app:realtimeBlurRadius="0dp"
        app:realtimeOverlayColor="@color/color_blur_overlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scrollView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:clipToPadding="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="@dimen/padding_content"
            android:layout_marginTop="300dp"
            android:paddingBottom="@dimen/padding_30">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerview_events"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:nestedScrollingEnabled="false"
                android:orientation="vertical"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:itemCount="1"
                tools:listitem="@layout/item_result_event" />

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/margin_24"
                android:src="@drawable/ic_success" />

            <TextView
                style="@style/Text28Style.Bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/margin_10"
                android:text="@string/text_success"
                android:textColor="@color/color_green"
                android:textSize="@dimen/text_size_48" />

            <TextView
                android:id="@+id/tv_note"
                style="@style/Text16Style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_16"
                android:gravity="center"
                android:text="@string/text_checkout_note" />

            <TextView
                android:id="@+id/tv_user"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_24"
                android:drawableStart="@drawable/ic_user"
                android:drawablePadding="@dimen/margin_10"
                tools:text="City Theater" />

            <TextView
                android:id="@+id/tv_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_16"
                android:drawableStart="@drawable/ic_email"
                android:drawablePadding="@dimen/margin_10"
                tools:text="paulv@showslinger.com" />

            <TextView
                android:id="@+id/tv_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_16"
                android:drawableStart="@drawable/ic_phone"
                android:drawablePadding="@dimen/margin_10"
                tools:text="033 382 2928" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_30"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_star" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_16"
                        android:gravity="center"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="bottom"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/tv_point"
                                style="@style/Text24Style.Bold"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textColor="@color/color_primary"
                                tools:text="10" />

                            <TextView
                                style="@style/TextStyle.Medium"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="@dimen/margin_6"
                                android:text="@string/text_point"
                                android:textColor="@color/color_primary" />
                        </LinearLayout>

                        <TextView
                            style="@style/TextStyle.Medium"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/text_your_earned"
                            android:textColor="@color/color_fiveth_text" />
                    </LinearLayout>
                </LinearLayout>

                <View
                    android:layout_width="1dp"
                    android:layout_height="48dp"
                    android:background="@color/color_line" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_24"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_total_point"
                        style="@style/TextStyle.Bold"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="1000 points" />

                    <TextView
                        style="@style/TextStyle.Medium"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_your_points"
                        android:textColor="@color/color_fiveth_text" />

                </LinearLayout>
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="46dp"
                android:orientation="horizontal">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_more_event"
                    style="@style/ButtonStrokePrimaryStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/text_more_event" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_print"
                    style="@style/ButtonPrimaryStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_24"
                    android:layout_weight="1"
                    android:text="@string/text_print"
                    app:iconTint="@color/color_text"
                    app:icon="@drawable/ic_print"
                    app:iconGravity="textStart" />
            </LinearLayout>
        </LinearLayout>

    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>