<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_bottomsheet_dialog"
    android:orientation="vertical"
    android:paddingBottom="@dimen/padding_content">

    <LinearLayout
        android:id="@+id/ln"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="@dimen/padding_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_back"
            style="@style/ButtonIconStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:icon="@drawable/ic_back"
            app:iconSize="@dimen/icon_40" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/tv_title"
            style="@style/Text22Style.Bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/color_text_invert"
            tools:text="@string/text_questions" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/padding_content"
        android:background="@drawable/bg_line_stroke"
        android:orientation="horizontal"
        android:padding="@dimen/padding_content">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_info"
            app:tint="@color/color_text_invert" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/padding_content"
            android:orientation="vertical">

            <TextView
                style="@style/Text15Style.Bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_fees"
                android:textColor="@color/color_text_invert" />

            <TextView
                style="@style/Text13Style.Light"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_fees_desc"
                android:textColor="@color/color_text_invert" />
        </LinearLayout>
    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/padding_content"
        android:layout_marginTop="@dimen/margin_10"
        app:cardBackgroundColor="@color/transparent"
        app:cardCornerRadius="@dimen/item_radius"
        app:cardElevation="0dp">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:itemCount="3"
            tools:listitem="@layout/item_edit_ticket" />
    </androidx.cardview.widget.CardView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/padding_content"
        android:layout_marginTop="@dimen/margin_10"
        android:orientation="horizontal">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/btn_cart"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@drawable/bg_primary_rounded"
            android:clipToPadding="false"
            android:paddingTop="@dimen/padding_10"
            android:paddingEnd="@dimen/padding_6"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/image_cart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:adjustViewBounds="true"
                android:src="@drawable/ic_cart"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_count"
                style="@style/CountStyle"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                app:layout_constraintBottom_toTopOf="@id/image_cart"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintEnd_toEndOf="@id/image_cart"
                app:layout_constraintStart_toEndOf="@id/image_cart"
                app:layout_constraintTop_toTopOf="@id/image_cart"
                tools:text="12" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:id="@+id/btn_checkout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_10"
            android:background="@drawable/bg_primary_rounded"
            android:gravity="center_vertical"
            android:minHeight="60dp"
            android:orientation="horizontal"
            android:padding="@dimen/padding_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/btn_cart"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tv_checkout"
                style="@style/Text15Style.Bold"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/text_checkout" />

            <TextView
                android:id="@+id/tv_total"
                style="@style/Text15Style.Bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="$0.0" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>